--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -17,9 +17,7 @@
              data-action="scroll@window->mission#onScroll">
           <ul class="mission-list-scrollarea">
 	    <% @project.mission_lists.each do |mission_list| %>
-	      <li class="mission-list">
-		<%= mission_list.name %>
-	      </li>
+	      <%= render "mission_lists/create_mission_list_item", mission_list: mission_list %>
 	    <% end %>
           </ul>
 	  <ul>
@@ -58,55 +56,7 @@
       </div>
 
       <% @project.mission_lists.each do |mission_list| %>
-        <ul id=<%= mission_list.hashid %>
-	    class="mission-list-title"
-          data-target="mission.missionListTitle">
-	  <%= mission_list.name %>
-	  <% mission_list.missions.each do |mission| %>
-            <li>
-              <input type="checkbox" id=<%= mission.hashid %>>
-	      <label for=<%= mission.hashid %> class="mission-title">
-		<a href="#" class="mission-title-link">
-		  <%= mission.name %>
-		</a>
-	      </label>
-	      <button type="button" class="btn mission-distributor">未指派</button>
-            </li>
-	  <% end %>
-          <li class="mission-new-form-item">
-            <div class="mission-new-form"
-                 data-target="mission.missionNewForm">
-              <div class="flex-vcenter">
-                <label class="mission-new-rectangle"></label>
-                <input type="text"
-		       class="mission-new-input"
-		       placeholder="新的任务"
-		       data-action="mission#clickMissionSubmitButton">
-                <button type="button" class="btn mission-distributor">未指派</button>
-              </div>
-              <div>
-		<button class="btn-sm mission-new-submit-button"
-			data-action="mission#clickMissionSubmitButton">
-		  添加任务
-		</button>
-                <a href="#"
-                   class="link-button-small"
-                   data-target="mission.missionCancelButton"
-                   data-action="mission#clickMissionCancelButton">
-                  取消
-		</a>
-              </div>
-            </div>
-          </li>
-          <li>
-            <a href="#"
-               class="mission-add-button"
-               data-target="mission.missionNewButton"
-               data-action="mission#clickMissionNewButton">
-              添加新任务
-            </a>
-          </li>
-	</ul>
+        <%= render "mission_lists/create_mission_list", mission_list: mission_list %>
       <% end %>
 
     </div>
