Use event.wich == 13 instead default data-action to make js keep respond even input's content is empty.

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -28,7 +28,7 @@
                   <input type="text"
 			 class="mission-list-new-input"
 			 placeholder="新的任务清单"
-			 data-action="mission#clickMissionListAddButton">
+			 data-action="keydown->mission#enterMissionListAdd">
                 </div>
                 <div>
                   <a href="#"
