--- a/app/views/mission_lists/_create_mission_list.html.erb
+++ b/app/views/mission_lists/_create_mission_list.html.erb
@@ -13,7 +13,7 @@
         <input type="text"
                class="mission-new-input"
                placeholder="新的任务"
-               data-action="mission#clickMissionSubmitButton">
+               data-action="keydown->mission#enterMissionNew">
         <button type="button" class="btn mission-distributor">未指派</button>
       </div>
       <div>
