--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -850,5 +850,5 @@ input[type="checkbox"]:disabled + label::before {
 
 .mission-list-scrollarea {
     overflow-y: auto;
-    height: 600px;
+    max-height: 600px;
 }
