--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -370,6 +370,7 @@ li {
 .board-box {
     background-color: #fff;
     width: 900px;
+    min-height: 600px;
     padding-top: 20px;
     padding-bottom: 20px;
     padding-left: 30px;
@@ -654,8 +655,8 @@ li {
     display: inline-block;
     font-size: 13px;
     font-weight: 350;
-    width: 80%;
     color: #999;
+    width: 80%;
     padding-bottom: 2px;
     margin-bottom: 20px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.05);
