--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -5,7 +5,7 @@
   </head>
   <body class="content-page-body" id="<%= controller.controller_name %>-<%= controller.action_name %>">
     <%= render 'layouts/header' %>
-    <div class="board-box position-relative"
+    <div class="board-box min-board-height position-relative"
          data-controller="mission"
          data-mission-mission-list-top="36">
       <div class="project-title"><%= @project.name %> </div>
