--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -6,15 +6,15 @@
   <body class="content-page-body" id="<%= controller.controller_name %>-<%= controller.action_name %>">
     <%= render 'layouts/header' %>
     <div class="board-box min-board-height right-float-menu-parent"
-         data-controller="mission"
-         data-mission-mission-list-top="36">
+         data-controller="mission rightfloatmenu"
+         data-rightfloatmenu-top-offset="36">
       <div class="project-title"><%= @project.name %> </div>
       <div class="project-splitter"></div>
 
-      <div class="right-float-menu-box">
+      <div class="right-float-menu-box right-float-menu-top">
         <div class="right-float-menu"
-             data-target="mission.missionListArea"
-             data-action="scroll@window->mission#onScroll">
+             data-target="rightfloatmenu.rightMenuArea"
+             data-action="scroll@window->rightfloatmenu#onScroll">
           <ul class="right-float-menu-scrollarea">
 	    <% if @project.mission_lists.length > 0 %>
               <% @project.mission_lists.each do |mission_list| %>
