--- a/app/views/mission_lists/show.html.erb
+++ b/app/views/mission_lists/show.html.erb
@@ -17,16 +17,54 @@
     <div data-controller="mission rightfloatmenu"
 	 data-rightfloatmenu-top-offset="80"
          class="board-box right-float-menu-parent">
+      <div class="modal fade" id="confirm-dialog" tabindex="-1" role="dialog">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                &times;
+              </button>
+              <h4 class="modal-title">
+                确定要删除这个任务清单吗?
+              </h4>
+            </div>
+            <div class="modal-footer">
+              <div class="flex-vcenter">
+                <button
+                    type="button"
+                    class="btn-sm dialog-confirm-button float-left"
+                    data-action="mission#deleteMissionList">
+                  确定
+                </button>
+                <a href="#"
+                   class="link-button-small float-left">
+                  取消
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div class="right-float-menu-box">
         <div class="right-float-menu"
              data-target="rightfloatmenu.rightMenuArea"
              data-action="scroll@window->rightfloatmenu#onScroll">
           <ul class="right-float-menu-scrollarea">
             <li class="right-float-menu-item">
-              编辑
+              <a href="#"
+		 class="right-float-menu-normal-button"
+		 data-action="mission#editMissionList">
+		编辑
+	      </a>
             </li>
             <li class="right-float-menu-item">
-              删除
+              <a href="#"
+		 class="right-float-menu-delete-button"
+		 data-toggle="modal"
+ 		 data-target="#confirm-dialog">
+                删除
+	      </a>
             </li>
           </ul>
         </div>
