--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -238,6 +238,17 @@ li {
     justify-content: center;
 }
 
+.flex-hcenter {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    flex-direction: row;
+    margin: auto;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+
 .flex-align-right {
     margin-left: auto;
 }
@@ -935,4 +946,56 @@ input[type="checkbox"]:disabled + label::before {
     text-align: left;
     vertical-align: middle;
     width: 400px;
+}
+
+.loading-dialog-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.3);
+    z-index: 9999;
+}
+
+.loading-dialog-spinner {
+    font-size: 20px;
+    margin-right: 10px
+}
+
+.loading-dialog-content {
+    font-size: 18px;
+}
+
+#loading-dialog {
+    display: none;
+}
+
+.loading-dialog {
+    background: white;
+    border-radius: var(--button-radius);
+    border: var(--button-border);
+    box-shadow: 0px 3px 10px #333333;
+    padding: 15px;
+    display: flex;
+    flex-direction: row;
+    margin: auto;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+
+.glyphicon-refresh-animate {
+    -animation: spin .7s infinite linear;
+    -webkit-animation: spin2 .7s infinite linear;
+}
+
+@-webkit-keyframes spin2 {
+    from { -webkit-transform: rotate(0deg);}
+    to { -webkit-transform: rotate(360deg);}
+}
+
+@keyframes spin {
+    from { transform: scale(1) rotate(0deg);}
+    to { transform: scale(1) rotate(360deg);}
 }
